--- a/Site/Views/Home/Index.cshtml
+++ b/Site/Views/Home/Index.cshtml
@@ -4,6 +4,11 @@
 
 <div id="gameBoard"></div>
 
+<div id="testZone" style="display: none;">
+    <b>Test Game Board</b>
+    <div id="testGameBoard"></div>
+</div>
+
 @section Scripts {
 
     @Scripts.Render("~/bundles/gamecontroller")
