--- a/Site/Views/Shared/_Layout.cshtml
+++ b/Site/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
         <title>@ViewBag.Title</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
+        <link href="~/Content/qunit.css" rel="stylesheet" />
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")
     </head>
@@ -41,9 +42,13 @@
                 </div>
             </div>
         </footer>
-
+        <script src="~/Scripts/qunit.js"></script>
         @Scripts.Render("~/bundles/jquery")
         @Scripts.Render("~/bundles/linq")
+
         @RenderSection("scripts", required: false)
+        
+        <div id="qunit"></div>
+        <div id="qunit-fixture"></div>
     </body>
 </html>
