--- a/Site/Views/Shared/_Layout.cshtml
+++ b/Site/Views/Shared/_Layout.cshtml
@@ -1,54 +1,72 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>@ViewBag.Title</title>
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <meta name="viewport" content="width=device-width" />
-        <link href="~/Content/qunit.css" rel="stylesheet" />
-        @Styles.Render("~/Content/css")
-        @Scripts.Render("~/bundles/modernizr")
-    </head>
-    <body>
-        <header>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p class="site-title">@Html.ActionLink("War Game", "Index", "Home")</p>
-                </div>
-                <div class="float-right">
-                    <section id="login">
-                        @Html.Partial("_LoginPartial")
-                    </section>
-                    <nav>
-                        <ul id="menu">
-                            <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                            <li>@Html.ActionLink("About", "About", "Home")</li>
-                            <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-        </header>
-        <div id="body">
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-fix">
-                @RenderBody()
-            </section>
-        </div>
-        <footer>
-            <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - <a href="http://www.pauldmendoza.com">Paul Mendoza</a></p>
-                </div>
-            </div>
-        </footer>
-        <script src="~/Scripts/qunit.js"></script>
-        @Scripts.Render("~/bundles/jquery")
-        @Scripts.Render("~/bundles/linq")
+<head>
+    <meta charset="utf-8" />
+    <title>@ViewBag.Title</title>
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width" />
+    <link href="~/Content/qunit.css" rel="stylesheet" />
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @if (string.Compare(System.Configuration.ConfigurationManager.AppSettings["RunUnitTests"], "true", true) == 0)
+    {   
+        <script src="~/Scripts/qunit.js"></script>        
+    }
+    else
+    {
+        <script type="text/javascript">
+            var QUnit = QUnit || {};
+            QUnit.module = function () { };
+            QUnit.test = function () { };
+            QUnit.testDone = function () { };
+            QUnit.testStart = function () { };
 
-        @RenderSection("scripts", required: false)
-        
+        </script>
+    }
+</head>
+<body>
+    <header>
+        <div class="content-wrapper">
+            <div class="float-left">
+                <p class="site-title">@Html.ActionLink("War Game", "Index", "Home")</p>
+            </div>
+            <div class="float-right">
+                <section id="login">
+                    @Html.Partial("_LoginPartial")
+                </section>
+                <nav>
+                    <ul id="menu">
+                        <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li>@Html.ActionLink("About", "About", "Home")</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <div id="body">
+        @RenderSection("featured", required: false)
+        <section class="content-wrapper main-content clear-fix">
+            @RenderBody()
+        </section>
+    </div>
+    <footer>
+        <div class="content-wrapper">
+            <div class="float-left">
+                <p>&copy; @DateTime.Now.Year - <a href="http://www.pauldmendoza.com">Paul Mendoza</a></p>
+            </div>
+        </div>
+    </footer>
+    <input type="hidden" value="@System.Configuration.ConfigurationManager.AppSettings["RunUnitTests"].ToLower()" id="runUnitTests" />
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/linq")
+
+    @RenderSection("scripts", required: false)
+    @if (string.Compare(System.Configuration.ConfigurationManager.AppSettings["RunUnitTests"], "true", true) == 0)
+    {    
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
-    </body>
+    }
+</body>
 </html>
